--- a/public/pages/index.html
+++ b/public/pages/index.html
@@ -1,2 +1,3 @@
 <h1>Hello World Samuel</h1>
 <img src="../publics/images/brazil.jpeg">
+<link rel="stylesheet" type="text/css" href="publics/css/style.css" media="all"/>
